# shipyard-scenegraph

./: .gitignore  Cargo.toml  README.md  vscode-workspace.code-workspace
.github/workflows/: build.yml
crate/: Cargo.toml
crate/src/: components.rs  convenience.rs  helpers.rs  hierarchy.rs  init.rs  lib.rs  pack.rs  prelude.rs  slice.rs  sort.rs  systems.rs  transform.rs  transforms.rs  views.rs  world.rs
crate/src/hierarchy/: components.rs  debug.rs  iter.rs  mod.rs
crate/src/math/: mod.rs  nalgebra_common.rs  traits.rs
crate/src/math/nalgebra/: aliases.rs  matrix4.rs  mod.rs  quat.rs  vec3.rs
crate/src/math/nalgebra_common/: matrix4.rs  mod.rs  quat.rs  vec3.rs
crate/src/math/nalgebra_glm/: aliases.rs  matrix4.rs  mod.rs  quat.rs  vec3.rs
crate/src/math/nalgebra_math/: matrix.rs  mod.rs  quat.rs  vec3.rs
crate/src/math/native/: aliases.rs  matrix4.rs  mod.rs  vec3.rs  vec4.rs
crate/src/math/native_math/: as_slice_impls.rs  matrix.rs  mod.rs  nalgebra_into.rs  quat.rs  vec3.rs
crate/src/traits/: extra.rs  math.rs  mod.rs  required.rs  slice.rs
crate/src/transform/: components.rs  errors.rs  matrix.rs  mod.rs  nalgebra_into.rs  quat.rs  traits.rs  transform_hierarchy.rs  values.rs  vec3.rs
crate/src/transform/nalgebra_transforms/: components.rs  math.rs  mod.rs
crate/src/transform/native_math/: components.rs  matrix.rs  mod.rs  nalgebra_into.rs  quat.rs  slice.rs  values.rs  vec3.rs
crate/tests/: nalgebra_glm_math.rs  nalgebra_math.rs  native_math.rs  test_hierarchy.rs  test_math.rs  test_nalgebra.rs  test_nalgebra_math.rs  test_native_math.rs  test_transform.rs  test_transform_basic.rs  test_transform_dirty.rs  test_transform_dirty_ids.rs  transform_basic.rs  transform_dirty.rs  transform_dirty_ids.rs
crate/tests/helpers/: mod.rs
example/: Cargo.toml  Makefile.toml  package-lock.json  package.json  rollup.dev.js  rollup.prod.js
example/.github/workflows/: build.yml
example/_static/: index.html  styles.css
example/_static/media/: fragment.glsl  vertex.glsl
example/build-utils/: copy-static-directory.js  transform-css.js
example/public/: index.html  styles.css
example/src/: components.rs  config.rs  controller.rs  dom.rs  geometry.rs  init.rs  input.rs  lib.rs  mainloop.rs  media.rs  physics.rs  renderer.rs  squares.rs  systems.rs  world.rs
example/src/controller/: helpers.rs  listeners.rs  queue.rs  state.rs
example/src/renderer/: item.rs  picker.rs
media/: vertex.glsl
wasm/: index.js  index.js.map
wasm/assets/: demo-44814977.wasm  demo-d01d4651.wasm
