[package]
name = "shipyard_scenegraph"
version = "0.4.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Scenegraph for Entity Component System"
keywords = ["ecs", "entity", "component", "scenegraph"]
categories = ["concurrency", "game-engines"]
readme = "../README.md"
repository = "https://github.com/dakom/shipyard-scenegraph"

[dependencies]

# shipyard = { version = "^0.5", default-features = false}
# shipyard_hierarchy = { version = "^0.4", default-features = false } 
# shipyard_hierarchy = { git = "https://github.com/dakom/shipyard-hierarchy", branch = "next", default-features = false }
# shipyard = { git = "https://github.com/leudz/shipyard", branch = "no-panic-feature", default-features = false }
shipyard_hierarchy = { git = "https://github.com/dakom/shipyard-hierarchy", branch = "next", default-features = false }
shipyard = { git = "https://github.com/leudz/shipyard", branch = "no-panic-feature", default-features = false }

thiserror = "^1.0"
cfg-if = "^0.1"
nalgebra = { version = "^0.23", optional = true, default-features = false}
# log = "0.4.8"

[features]
nalgebra_math = ["nalgebra"]
native_math = []
default = ["shipyard/default", "shipyard_hierarchy/default"]
parallel = ["shipyard/parallel", "shipyard_hierarchy/parallel"]
non_send = ["shipyard/non_send", "shipyard_hierarchy/non_send"]
non_sync = ["shipyard/non_sync", "shipyard_hierarchy/non_sync"]
std = ["shipyard/std", "shipyard_hierarchy/std"]
doc = ["native_math", "nalgebra_math"]

[package.metadata.docs.rs]
features = ["doc"] 
rustdoc-args = ["--cfg", "no-deps"]

[[test]]
name = "test_transform_basic"
required-features = ["native_math"]

[[test]]
name = "test_transform_dirty_ids"
required-features = ["native_math"]

[[test]]
name = "test_transform_dirty"
required-features = ["native_math"]

[[test]]
name = "test_native_math"
required-features = ["native_math"]

[[test]]
name = "test_nalgebra_math"
required-features = ["nalgebra_math"]