[package]
name = "shipyard_scenegraph"
version = "0.6.1"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Scenegraph for Entity Component System"
keywords = ["ecs", "entity", "component", "scenegraph"]
categories = ["concurrency", "game-engines"]
readme = "../README.md"
repository = "https://github.com/dakom/shipyard-scenegraph"

[dependencies]

shipyard = { version = "^0.6", default-features = false }
shipyard_hierarchy = { version = "^0.6", default-features = false }
thiserror = "1.0.49"
cfg-if = "1.0.0"
nalgebra = { version = "0.32.3", optional = true, default-features = false }
nalgebra-glm = { version = "0.18.0", optional = true }
# log = "0.4.8"

[features]
nalgebra_math = ["nalgebra"]
nalgebra_glm_math = ["nalgebra-glm", "nalgebra"]
native_math = []
default = ["shipyard/default"]
parallel = ["shipyard/parallel"]
#non_send = ["shipyard/non_send", "shipyard_hierarchy/non_send"]
#non_sync = ["shipyard/non_sync", "shipyard_hierarchy/non_sync"]
#wasm = ["shipyard/wasm", "shipyard_hierarchy/wasm"]
std = ["shipyard/std"]
doc = ["native_math", "nalgebra_math"]

[package.metadata.docs.rs]
features = ["doc"] 
rustdoc-args = ["--cfg", "no-deps"]

[[test]]
name = "transform_basic"
required-features = ["native_math"]

[[test]]
name = "transform_dirty_ids"
required-features = ["native_math"]

[[test]]
name = "transform_dirty"
required-features = ["native_math"]

[[test]]
name = "native_math"
required-features = ["native_math"]

[[test]]
name = "nalgebra_math"
required-features = ["nalgebra_math"]

[[test]]
name = "nalgebra_glm_math"
required-features = ["nalgebra_glm_math"]
