[package]
name = "demo"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]

#SOON: shipyard = { version = "^0.5", features = ["non_send", "non_sync"], default-features = false }
shipyard = { git = "https://github.com/leudz/shipyard", branch = "no-panic-feature", features = ["non_send", "non_sync", "wasm"], default-features = false }
shipyard_scenegraph = { path = "../crate", features = ["non_send", "non_sync", "wasm"], default-features = false}

nalgebra = { version = "0.23.2", default-features = false, features = ["libm"] }
wasm-bindgen = "0.2.69"
js-sys = "0.3.46"
wasm-bindgen-futures= "0.4.19"
gloo-events = "0.1.1"
awsm_web = { version = "0.6.7", features = ["tick", "webgl", "loaders", "audio", "serde_iso"], default-features = false }
wee_alloc = { version = "0.4.5", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
cfg-if = "1.0.0"
log = "0.4.11"
lazy_static = "1.4.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
derive_deref = "1.1.1"

# [patch.crates-io]
# shipyard = { version = "^0.3", features = ["proc", "non_send", "non_sync"], default-features = false}

[dependencies.web-sys]
version = "0.3.46"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "Node",
    "Window",
    "Performance",

]
[features]
default = ["wee_alloc", "native_math"]
dev = ["wee_alloc", "native_math", "wasm-logger", "console_error_panic_hook"]
native_math = ["shipyard_scenegraph/native_math"]
nalgebra_math = ["shipyard_scenegraph/nalgebra_math"]
