[package]
name = "demo"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]

#old - shipyard = { version = "^0.5", features = ["non_send", "non_sync"], default-features = false }
shipyard = { version = "0.6.2", default-features = false, features = ["proc","thread_local" ] }
shipyard_scenegraph = { path = "../crate", default-features = false, features = ["nalgebra_math"]}
nalgebra = "0.31.1"
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"
wasm-bindgen-futures= "0.4.32"
gloo-events = "0.1.2"
awsm_web = { version = "0.37.0", features = ["tick", "webgl", "loaders", "audio", "dom", "serde_iso"], default-features = false }
wee_alloc = { version = "0.4.5", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
cfg-if = "1.0.0"
log = "0.4.17"
lazy_static = "1.4.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
derive_deref = "1.1.1"

# [patch.crates-io]
# shipyard = { version = "^0.3", features = ["proc", "non_send", "non_sync"], default-features = false}

[dependencies.web-sys]
version = "0.3.59"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "Node",
    "Window",
    "Performance",
    "KeyboardEvent",
    "WheelEvent"

]
[features]
default = ["wee_alloc"]
dev = ["wee_alloc", "wasm-logger", "console_error_panic_hook"]
